[kicker/kickoff] Remove unneeded check for appstream handler

When KApplicationTrader::preferredService returns no service we ask KIO whether appstream is a known protocol

This is expensive and unnecessary, we already know there is no app that can open appstream URLs because KApplicationTrader did not return one

BUG: 477138